fix alignment components with nav-wrapper

--- a/client/src/app/components/panelAdmin/FAQ/faq.component.scss
+++ b/client/src/app/components/panelAdmin/FAQ/faq.component.scss
@@ -6,7 +6,7 @@
     font-family: $font-poppins;
     .roodeo-page-faq {
       // height: 100%;
-      padding-top: 49px;
+      padding-top: 55px;
       margin: 0 auto;
       display: flex;
       width: 100%;
