--- a/client/src/app/components/panelAdmin/contact-support/contact-join-us/contact-join-us.component.scss
+++ b/client/src/app/components/panelAdmin/contact-support/contact-join-us/contact-join-us.component.scss
@@ -30,7 +30,7 @@
       flex-direction: column;
       align-items: center;
       width: 98%;
-      margin: 18px auto 0;
+      margin: 25px auto 0;
       background: white;
       padding: 40px 80px;
       border: $border-table;
