--- a/client/src/app/components/panelAdmin/profil-utilisateur/profil-utilisateur.component.scss
+++ b/client/src/app/components/panelAdmin/profil-utilisateur/profil-utilisateur.component.scss
@@ -114,7 +114,7 @@
 
         #section1{
             width: 98%;
-            margin: 18px 1% 0 0;
+            margin: 25px 1% 0 0;
             background: white;
             padding: 40px 80px;
             border: $border-table;
@@ -125,7 +125,7 @@
 
         #section2{
             width: 98%;
-            margin: 18px auto 0;
+            margin: 25px auto 0;
             background: white;
             padding: 40px 80px;
             border: $border-table;
