--- a/client/src/app/components/panelAdmin/protection-de-donnees/protection-de-donnees.component.scss
+++ b/client/src/app/components/panelAdmin/protection-de-donnees/protection-de-donnees.component.scss
@@ -32,7 +32,7 @@
 
         #section1 {
             width: 98%;
-            margin: 49px auto 0;
+            margin: 55px auto 0;
             background: white;
             padding: 40px;
             border: $border-table;
